# package_file_verify

./: Cargo.toml
.github/workflows/: publish_crate.yml
doc/: crates.js  search-index.js  settings.html  source-files.js
doc/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
doc/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
doc/package_file_verify/: all.html  enum.CheckResult.html  index.html  sidebar-items.js  struct.VerificationResult.html
doc/src/package_file_verify/: package_file_verify.rs.html
src/: lib.rs  result.rs
src/verifiers/: dpkg.rs  resolver.rs  rpm.rs  utils.rs
