[package]
name = "package_file_verify"
version = "0.1.0"
edition = "2021"
description = "Verify if a given file is currently in the deployed state according to the local package manager."

[dependencies]
os_info = { version = "3", default-features = false }
log = { version = "0.4" }
env_logger = "0.9"
clap = { version = "3.1", features = ["derive"] }